24 October 2006: Wouter
	- Recycle rrset memory after doing special processing on the deleted
	  rrset data.
	- log message clearer for 'duplicate xfr part' to 'discarding partial
	  xfr part'.
	- if you have a server that has IXFR turned off but sends a TC flag
	  for IXFR queries, xfrd will retry to TCP. 

23 October 2006: Wouter
	- Added checks for out of memory in reload (diff file). And it exits
	  if so neatly.

13 October 2006: Wouter
	- Bug #149: Wrong text for NOTAUTH error code. When notify is not
	  authorised REFUSED error code returned instead.

4 October 2006: Wouter
	- More fixes from Koh-ichi Ito (kohi@iri.co.jp now), for bug #146,
	  his bash does not do $(( )), so nsdc.sh has to use test of course.

29 September 2006: Wouter
	- recyclebin works, added a test that uses it (about 3 Mb goes
	  through the recyclebin). This resolves bug #147.
	- Made -L 1 logging is little less verbose (-L 2 gets it all).
	- added search path for openssl on Solaris 10 (/usr/sfw).

28 September 2006: Wouter
	- Removed unused global variable current_region,
	  and routines for it in region-allocator.c and .h.
	- Added recycle option to regions. It will keep track of small
	  objects in a recycle bin. Large objects are deallocated.
	  No calls to recycle yet, unit test it first.
	- added unit test for region recycle.

27 September 2006: Wouter
	- Further suggestion from Koh-ichi Ito, I've set opt->xfrdfile
	  to XFRDFILE in options_create. So opt->xfrdfile and opt->difffile
	  are never NULL. This simplifies code elsewhere.
	  And also handles chroot case (+=l) for default values.
	- Fix for bug #145. The skip file position in the diff file was used
	  inconsistently - one part of the code skipped to before the 'IXFR'
	  type code and another part skipped to after that. Now all skip to
	  before the type code. This bug only happens if your diff file 
	  is like: zone1_part1, zone2_part_1, zone1_part2, zone1_commit,